crates/sui-adapter-transactional-tests/tests/shared/by_value_shared_object_deletion_via_make_move_vec.exp
processed 10 tasks

task 1 'publish'. lines 6-45:
Error: error[E03002]: unbound module
  ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpSMHdhy:8:9
  │
8 │     use sui::sui::SUI;
  │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpSMHdhy:14:50
   │
14 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpSMHdhy:29:45
   │
29 │     public fun pop_coin(mut o2: vector<Coin<BFC>>): Coin<BFC> {
   │                                             ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpSMHdhy:29:58
   │
29 │     public fun pop_coin(mut o2: vector<Coin<BFC>>): Coin<BFC> {
   │                                                          ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpSMHdhy:34:36
   │
34 │     public fun share_coin(o2: Coin<BFC>) {
   │                                    ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 47-47:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 49-49:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'view-object'. lines 51-51:
Error: task 4, lines 51-51. Unbound fake id 2,0

task 5 'view-object'. lines 53-55:
Error: task 5, lines 53-53. Unbound fake id 3,0

task 6 'programmable'. lines 56-58:
Error: INVALID TEST. Unknown object, object(2,0)

task 7 'run'. lines 60-60:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 8 'view-object'. lines 62-64:
Error: task 8, lines 62-62. Unbound fake id 7,0

task 9 'programmable'. lines 65-70:
Error: INVALID TEST. Unknown object, object(7,0)
